# bag-of-words

./: .gitignore  CMakeLists.txt  README.md
python/: make_test_data_from_coil.py
release/: upload_artifacts.sh
src/: CMakeLists.txt  bag_of_words.cpp  bag_of_words.hpp  bag_of_words_vers_2.cpp  bag_of_words_vers_2.hpp  compute_cluster_centroids.cpp  create_dictionary_vers_2.cpp  extract_features.cpp  make_histograms.cpp  make_web_output.cpp  search_image_vers_2.cpp
src/binaryio/: CMakeLists.txt  binaryio.cpp  binaryio.hpp  binaryio.ipp
src/clustering/: CMakeLists.txt  clustering_strategy.hpp  clustering_strategy_kmeans.hpp  clustering_strategy_kmeans.ipp  clustering_strategy_kmeans_opencv.hpp  clustering_strategy_kmeans_opencv.ipp  clustering_strategy_kmeans_vers_2.hpp  clustering_strategy_kmeans_vers_2.ipp  clustering_strategy_kmeans_with_index.hpp  clustering_strategy_kmeans_with_index.ipp  feature_point.hpp  feature_point.ipp
src/clustering/kmeans_vers_2/: cluster.hpp  cluster.ipp  feature_point.hpp  kmeans.hpp  kmeans.ipp
src/clustering/kmeans_with_index/: index.hpp  index.ipp  node.hpp  random_tree.hpp  random_tree.ipp
src/dataset/: CMakeLists.txt  dataset.cpp  dataset.hpp  image_item.cpp  image_item.hpp
src/features/: CMakeLists.txt  features.cpp  features.hpp
src/histogram/: histogram.hpp  histogram.ipp
src/tools/: linalg.hpp  linalg.ipp  sampling.hpp  sampling.ipp  terminalout.hpp
src/web/: CMakeLists.txt  html_writer.cpp  html_writer.hpp  web.cpp  web.hpp
tests/: CMakeLists.txt  benchmark_clustering.cpp  get_tests_data_path.cpp  get_tests_data_path.hpp  make_clustering_test_data.hpp  make_test_dataset.cpp  make_test_dataset.hpp  test_bag_of_words.cpp  test_binaryio.cpp  test_clustering.cpp  test_dataset.cpp  test_features.cpp  test_histogram.cpp  test_kmeans.cpp  test_kmeans_with_index.cpp  test_linalg.cpp  test_sampling.cpp  test_web.cpp
